# astroagent

./: .gitignore  AGENTS.md  DECISIONS.md  EVALUATION.md  README.md  REQUIREMENTS.md
backend/: .env.example  langgraph.json  pyproject.toml
backend/scripts/: build_corpus.py
backend/src/agent/: __init__.py  embedder.py  graph.py  guardrails.py  model.py  semantic_guard.py  state.py
backend/src/agent/knowledge/: corpus.json
backend/src/agent/tools/: __init__.py  _ephemeris.py  chart.py  geocode.py  knowledge.py  transits.py
backend/tests/: conftest.py  test_birth_extraction.py  test_chart.py  test_chart_reference.py  test_echo.py  test_embedder.py  test_eval_metrics.py  test_geocode.py  test_graph_state.py  test_guardrail_metrics.py  test_guardrails.py  test_knowledge.py  test_model.py  test_semantic_guard.py  test_transits.py
docs/: astroagent-arch.md  astroagent-prd.md  astroagent-tid.md
eval/: DOGFOODING.md  GUARDRAIL_SCORECARD.md  RUBRIC.md  SCORECARD.md  astroagent-golden-set.jsonl  dogfood_log_template.csv  golden_set.jsonl  guardrail_metrics.py  guardrail_results.csv  guardrail_set.jsonl  metrics.py  my_new_results.csv  results_log.csv  results_log_archived_20260531_022042.csv  run_eval.py  run_guardrail_eval.py  semantic_thresholds.json  semantic_tune_set.jsonl  tune_semantic.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: assistant.tsx  globals.css  layout.tsx
frontend/components/: birth-form-popup.tsx  birth-form.tsx  composer-attach-profile.tsx  history-sidebar.tsx  lotus-bloom.module.css  lotus-bloom.tsx  thread.tsx  (+4 more)
(+8 files in other folders)
