[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astroagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langgraph-cli[inmem]>=0.1",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openrouter>=0.0.1",
    "langchain-ollama>=0.2",
    "timezonefinder>=6.0",
    "geopy>=2.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
# kerykeion v6 alpha + libephemeris (pure Python, no C compiler needed)
# Install: pip install -e ".[chart]"
chart = ["kerykeion==6.0.0a47", "libephemeris>=2.0.1"]
# Requires torch/transformers — install before Phase 2 (cut-first anyway)
rag = ["sentence-transformers>=3.0"]
# Judge model for Phase 5 eval
eval = ["deepeval>=1.0"]
# Full install
all = ["astroagent[chart,rag,eval]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
